--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,22 @@
         android:theme="@style/Theme.StudentManagement"
         tools:targetApi="31">
         <activity
-            android:name=".forgetpass"
+            android:name=".home.HomeActivity"
             android:exported="false" />
         <activity
-            android:name=".SignUp"
+            android:name=".auth.views.forgetpass"
             android:exported="false" />
         <activity
-            android:name=".LoginPage"
+            android:name=".auth.views.SignUp"
             android:exported="false" />
         <activity
-            android:name=".splashscreen"
+            android:name=".auth.views.LoginPage"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".splashscreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
