--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StudentManagement"
         tools:targetApi="31">
+
+
+        <activity
+            android:name=".StudentActivity"
+            android:exported="false" />
         <activity
             android:name=".ClassList"
             android:exported="false" />
